Change Object to GooRitss Logo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gooritss Company Profile</title>
+    <link rel="shortcut icon" href="/favicon.ico?v=2" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico?v=2" type="image/x-icon">
 </head>
 
 <style>
@@ -42,12 +44,12 @@
         height: 100px;
         border-radius: 50%;
         display: block;
-        background-color: #2187C7;
+        background-color: #FDDA33;
         margin: 0 auto;
         position: relative;
         color: #fff;
         text-align: center;
-        padding-top: 25px;
+        padding: 16px;
         font-weight: 800;
         -webkit-box-sizing: border-box;
         -moz-box-sizing: border-box;
@@ -62,9 +64,10 @@
     .object-rope {
         height: 100%;
         width: 5px;
-        background-color: #2187C7;
+        background-color: #FDDA33;
         content: "";
         display: block;
+        padding-top: -10px;
         margin-left: 50%;
     }
 
@@ -94,15 +97,16 @@
 <body>
     <div class="object">
         <div class="object-rope"></div>
-        <div class="object-shape">
+        <img src="gooritss.png" class="object-shape" alt="">
+        <!-- <div >
             Coming <span class="soon">Soon</span>
-        </div>
+        </div> -->
     </div>
 
     <div class="content">
         <!-- <img class="logo" src="{{asset('assets/logo/bottoleuniionlogo.jpeg')}}" /> -->
 
-        <p class="message">Our website will be launching</p>
+        <p class="message">Our website will be launching soon</p>
 
         <p class="mailtoaddress"><em>Developed by <a href="#"> IT Team PT GOORITSS </a></em></p>
     </div>
